# safe-eth-py

./: .coveragerc  .env  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.MD  README.rst  build_docs.sh  docker-compose.yml  gp_cli.py  manage.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  result.txt  run_ganache_tests.sh  run_tests.sh  setup.cfg  setup.py  trace.py  trace_geth.py  trace_parity.py
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: add_safe_address_new_chain.yml  bug_report.md  feature_request.md
.github/scripts/: execute_address_issue.py  validate_address_issue.py
.github/scripts/github_adding_addresses/: commit_linter_fixes.py  create_pr_with_new_address.py  validate_new_address_issue_input_data.py
.github/workflows/: cla.yml  codeql-analysis.yml  create_pr_with_new_address.yml  execute_address_issue.yml  python.yml  validate_address_issue.yml  validate_new_address_issue_input_data.yml
config/settings/: base.py  local.py  test.py
docs/source/: conf.py  gnosis.eth.clients.rst  gnosis.eth.contracts.rst  gnosis.eth.django.rst  gnosis.eth.eip712.rst  gnosis.eth.oracles.abis.rst  gnosis.eth.oracles.rst  gnosis.eth.rst  gnosis.rst  gnosis.safe.rst  index.rst  modules.rst  quickstart.rst  safe_eth.cowsap.rst  safe_eth.eth.account_abstraction.rst  safe_eth.eth.clients.rst  safe_eth.eth.contracts.abis.rst  safe_eth.eth.contracts.rst  safe_eth.eth.django.rst  safe_eth.eth.eip712.rst  safe_eth.eth.oracles.abis.rst  safe_eth.eth.oracles.helpers.rst  safe_eth.eth.oracles.rst  safe_eth.eth.rst  safe_eth.rst  safe_eth.safe.account_abstraction.rst  safe_eth.safe.api.rst  safe_eth.safe.api.transaction_service_api.rst  safe_eth.safe.rst  safe_eth.util.rst
gnosis/: __init__.py
gnosis/cowsap/: cow_swap_api.py  order.py
gnosis/cowsap/tests/: test_cow_swap_api.py
gnosis/eth/: __init__.py  bundler_client.py  constants.py  contract_common.py  contracts.py  ethereum_client.py  ethereum_network.py  ethereum_service.py  exceptions.py  multicall.py  typing.py  utils.py
gnosis/eth/aa/: bundler_client.py  user_operation.py
gnosis/eth/abis/: ERC20.json  GnosisSafe.json  ProxyFactory2.json  __init__.py
gnosis/eth/account_abstraction/: __init__.py  bundler_client.py  constants.py  exceptions.py  user_operation.py  user_operation_receipt.py
gnosis/eth/clients/: __init__.py  blockscout_client.py  contract_metadata.py  ens_client.py  etherscan_client.py  sourcify.py  sourcify_client.py
gnosis/eth/contracts/: CPKFactoryProxy.json  ERC1155.json  GnosisSafe.json  GnosisSafeV1.1.1.json  GnosisSafe_V1_1_1.json  GnosisSafe_V1_3_0.json  ProxyFactory_V1_1_1.json  ProxyFactory_V1_4_1.json  Proxy_V1_1_1.json  __init__.py  contract_base.py  contract_common.py  uniswap_v2_router.json
gnosis/eth/django/: admin.py  filters.py  forms.py  models.py  serializers.py  validators.py
gnosis/eth/eip712/: __init__.py
gnosis/eth/oracles/: __init__.py  cowswap.py  kyber.py  oracles.py  superfluid.py  sushiswap.py  uniswap_v3.py  utils.py
gnosis/eth/tests/: ethereum_test_case.py  test_bundler_client.py  test_ethereum_client.py  test_ethereum_service.py  test_multicall.py  test_oracles.py  test_utils.py  utils.py
gnosis/protocol/: __init__.py  gnosis_protocol_api.py  order.py  protocol.py
gnosis/protocol/tests/: test_gnosis_protocol_api.py
gnosis/safe/: __init__.py  addresses.py  contracts.py  enums.py  ethereum_service.py  exceptions.py  multi_send.py  proxy_factory.py  safe.py  safe_create2_tx.py  safe_creation_tx.py  safe_creator.py  safe_deployments.py  safe_service.py  safe_signature.py  safe_tx.py  serializers.py  signatures.py
gnosis/safe/aa/: safe_operation.py
gnosis/safe/abis/: GnosisSafe.json  GnosisSafePersonalEdition.json
gnosis/safe/account_abstraction/: __init__.py  safe_operation.py
gnosis/safe/api/: __init__.py  base_api.py  relay_service_api.py  transaction_service_api.py
gnosis/safe/tests/: factories.py  safe_team_test_case.py  safe_test_case.py  test_addresses.py  test_ethereum_service.py  test_ganache.py  test_multi_send.py  test_proxy_factory.py  test_real_nodes.py  test_safe.py  test_safe_create2_tx.py  test_safe_creation_tx.py  test_safe_service.py  test_safe_signature.py  test_safe_tx.py  test_safe_v1_0_0.py  test_safe_v1_3_0.py  test_serializers.py  test_signatures.py  utils.py
gnosis/util/: __init__.py  http.py  util.py
safe_eth/: __init__.py
safe_eth/cowsap/: __init__.py  cow_swap_api.py
safe_eth/eth/: __init__.py  async_ethereum_client.py  constants.py  ethereum_client.py  ethereum_network.py  exceptions.py  multicall.py  typing.py  utils.py
safe_eth/eth/account_abstraction/: __init__.py  bundler_client.py  user_operation.py  user_operation_receipt.py
safe_eth/eth/clients/: __init__.py  blockscout_client.py  contract_metadata.py  ens_client.py  etherscan_client.py  etherscan_client_v2.py  rate_limiter.py  sourcify_client.py
safe_eth/eth/contracts/: __init__.py  contract_base.py
safe_eth/eth/django/: filters.py  forms.py  models.py  serializers.py  validators.py
safe_eth/eth/eip712/: __init__.py
safe_eth/eth/oracles/: cowswap.py  exceptions.py  kyber.py  oracles.py  superfluid.py  sushiswap.py  uniswap_v3.py  utils.py
safe_eth/eth/proxies/: __init__.py  minimal_proxy.py  proxy.py  (+2 more)
safe_eth/safe/: __init__.py  addresses.py  compatibility_fallback_handler.py  constants.py  enums.py  extensible_fallback_handler.py  multi_send.py  p256.py  proxy_factory.py  safe.py  safe_create2_tx.py  safe_creator.py  safe_deployments.py  safe_signature.py  safe_tx.py  serializers.py  signatures.py
safe_eth/util/: __init__.py  http.py  util.py
scripts/: deploy_pipy.sh  find_deployment.py  load_safe_deployments.py
scripts/chainlist/: chains.py  result.txt
scripts/chainlist-reader/: .gitignore  README.md  index.js  package-lock.json  package.json
scripts/cowswap/: cow_swap_cli.py
scripts/generators/: generate_chains_info_from_viem.py  generate_chains_list.py  generate_safe_deployments.py
signatures/version1/: cla.json
(+149 files in other folders)
