[metadata]
name = safe-eth-py
version = 4.5.0
description = Safe Ecosystem Foundation utilities for Ethereum projects
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords =
    ethereum
    web3
    django
    safe
    cowswap
    gnosis
url = https://github.com/safe-global/safe-eth-py
author = Uxío
author_email = uxio@safe.global
license = MIT License
license_files =
    LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 3.0
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
project_urls =
    Documentation = https://safe-eth-py.readthedocs.io/en/latest/
    Source = https://github.com/safe-global/safe-eth-py
    Tracker = https://github.com/safe-global/safe-eth-py/issues

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    cached-property>=1.5; python_version < "3.8"
    eip712_structs
    packaging
    py-evm==0.5.0a3
    pysha3>=1.0.0
    requests>=2
    typing-extensions>=3.10; python_version < "3.8"
    web3>=5.23.0
python_requires = >=3.7

[options.package_data]
gnosis =
    py.typed
    *.json

[options.extras_require]
django =
    django>=2
    django-filter>=2
    djangorestframework>=2

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[isort]
profile = black
default_section = THIRDPARTY
known_first_party = gnosis
known_gnosis = py_eth_sig_utils
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,GNOSIS,FIRSTPARTY,LOCALFOLDER
